terraform/security.tf
variable "ssh_allowed_cidr" {
  description = "CIDR block allowed to access SSH"
  type        = string
}

resource "aws_security_group" "app" {
  name        = "react-devops-assessment"
  description = "Security group for the React application server"

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.ssh_allowed_cidr]
  }

  egress {
    description = "Allow outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "react-devops-assessment"
  }
}
